# smartboard

./: AGENTS.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
src/: app.rs  assets.rs  egui_tools.rs  main.rs  render.rs  state.rs  ui.rs  utils.rs  windows_utils.rs
src/state/: flat.rs  mod.rs
src/utils/: cursor_pos.rs  dark_mode.rs  linux.rs  mod.rs  stroke.rs  ui.rs  windows.rs
